<resources>
    <string name="app_name">SimpleTodo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings related to task-->
    <string name="task_name">Task name</string>
    <string name="task_deadline">Deadline</string>
    <string name="task_description">Description</string>
    <string name="task_status">Status</string>
    <string name="task_priority">Priority</string>
    <string name="task_image">Image</string>
    <string-array name="status_array">
        <item>Done</item>
        <item>Todo</item>
    </string-array>
    <string-array name="priority_array">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>

</resources>
